fix nav bar spacing issue

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -63,7 +63,6 @@ body > nav {
   grid-area: nav;
   background-color: #7070FF;
   display: flex;
-  justify-content: space-between;
   align-items: center;
   padding: 7px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -92,6 +91,12 @@ nav > a.left:hover, nav > a.active {
   color: #2c3e50;
   background-color: #f6f6fc;
   border-color: #f6f6fc;
+}
+
+
+nav > a.left {
+  margin: 13px;
+  color: #f6f6fc;
 }
 
 
